test/assets/invalid/signatures/missing-leading-arg.hs
a :: Int
a x = fromIntegral 1 :: Int

b = a "AB"